Refactor Query from flat fields to a clause list
Query had grown ~19 instance fields across the last few rounds of
feature work: parallel patternNodes/patternEdges/patternOptional/
patternLocalWhereExpressions arrays describing MATCH clauses
(structure-of-arrays where the natural shape is array-of-structures),
plus a with-prefixed twin of every RETURN field (distinct/withDistinct,
orderItems/withOrderItems, skip/withSkip, limit/withLimit,
whereExpression/withWhereExpression) that only stayed manageable
because exactly one WITH is supported.

Replace both with Query { List<Clause> clauses }, where Clause is
MatchClause | WithClause | ReturnClause, each carrying its own fields
and a reference to the ANTLR parse-tree node it came from. Binding
(Cypher pattern + schema -> BoundPattern) and aggregate-detection move
onto Pattern/MatchClause/WithClause respectively, so Query/Mapping go
back to being orchestrators rather than doing the work themselves.

A useful side effect: hasMultipleWithClauses/hasMatchAfterWith become
a single linear scan over the now document-ordered clause list instead
of comparing ANTLR token indices, and those two fields disappear
entirely.

Pure refactor of the Cypher-model layer - ReadQuery/BoundPattern/
SelectQuery and their Python equivalents are untouched, and behavior
is unchanged: all 80 Java and 78 Python tests pass with no test
rewrites beyond updating direct low-level Query accessor usage and
hand-built Query(...) construction in test_mapping.py to the new
clause shape.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>